// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - File Card renders correctly 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      />
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with different download icon 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with download that has different icon path 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with empty download icon name 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with new attributes download 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Go here
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with override default attributes download 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Go here
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card renders correctly with title 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    File card test title
  </h6>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      />
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card translations renders correctly with download that has different icon path 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      />
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card translations renders correctly with empty download icon name 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      />
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File Card translations renders correctly with new attributes download 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="border-bottom px-3-5 py-3 d-md-flex"
    >
      <div
        class="pe-2 pb-2"
      />
      <div>
        <p
          class="fw-medium mb-2 fs-5"
        >
          Document title
        </p>
        <p
          class="mb-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <span
          class="text-muted d-inline-block me-3 mb-2 mb-md-0 text-nowrap"
        >
          Article
        </span>
        <span
          class="text-muted d-inline-block me-3 text-nowrap"
        >
          Published : 3 September 2022
        </span>
      </div>
    </div>
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Go here
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly with new class on translation 1`] = `
<jest>
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - File renders correctly with title and link 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  />
  <div
    class="bcl-file border rounded"
  >
    <div
      class="px-3-5 py-3"
    >
      <div
        class="d-md-flex"
      >
        <div
          class="pe-2 pb-2"
        />
        <div
          class="d-md-flex flex-grow-1"
        >
          <div
            class="flex-grow-1"
          >
            <p
              class="fw-medium m-0 fs-5"
            >
              File title
            </p>
            <small
              class="fw-medium m-0"
            >
              English
              <span
                class="fw-normal"
              >
                 (16.2 MB - PDF)
              </span>
            </small>
          </div>
          <a
            href="/example.html"
          >
            Download
          </a>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
